# python-converter

./: .gitignore  CMakeLists.txt  README.md  ZeraConverter.py  setup.py
.github/workflows/: pylint.yml  python-app.yml
pythonconverter_pkg/: ConfigurationInterface.py  ConversionUnit.py  CppInterface.py  DatabaseInterface.py  DatabaseInterfaceFactory.py  SqlInterface.py  SqlLite3Interface.py  XmlInterface.py
test/: 2025_02_13_MTVIS_TEST_TAB.ods  comtest_ced.db  comtest_meas.db  comtest_ref.db  mttest.db  mtvis_test.db  test.db  testburden.db
unittesting/: CppUnittest.py  MTVisResUnittest.py
zeraconverterengines/: Common.py  MTVisMain.py  MTVisRes.py
